--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -234,6 +234,7 @@
    #resume h1 { letter-spacing: 3px; }
    #resume .main-col { padding-right: 30px; }
    #resume h3, #resume .info { text-align: center; }
+   #resume span{justify-content: center;}
       
    .bars { width: 100%; }
 
