last experience added

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -801,8 +801,8 @@ call-to-action .button {
 
 #contact {
    background: #191919;
-   padding-top: 96px;
-   padding-bottom: 102px;
+   padding-top: 50px;
+   padding-bottom: 10px;
    color: #636363;
 }
 #contact .section-head { margin-bottom: 42px; }
@@ -836,7 +836,9 @@ call-to-action .button {
 }
 #contact p.lead {
    font: 18px/36px 'opensans-light', sans-serif;
-   padding-right: 3%;
+   padding-right: 0px;
+   max-width: 500px;
+   text-align: center
 }
 #contact .header-col { padding-top: 6px; }
 
